k8s/ingress-fe-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod"},"creationTimestamp":"2023-03-15T10:36:44Z","generation":3,"managedFields":[{"apiVersion":"networking.k8s.io/v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:cert-manager.io/cluster-issuer":{},"f:kubectl.kubernetes.io/last-applied-configuration":{}}},"f:spec":{"f:ingressClassName":{}}},"manager":"kubectl-create","operation":"Up [...]
  creationTimestamp: "2023-03-15T10:36:44Z"
  generation: 6
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:cert-manager.io/cluster-issuer: {}
      f:spec:
        f:ingressClassName: {}
    manager: kubectl-create
    operation: Update
    time: "2023-03-15T10:36:44Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: nginx-ingress-controller
    operation: Update
    subresource: status
    time: "2023-03-15T10:37:10Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:kubectl.kubernetes.io/last-applied-configuration: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2023-03-16T14:43:54Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:rules: {}
        f:tls: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2023-03-16T14:46:11Z"
  name: frontend-dev
  namespace: default
  resourceVersion: "35032228"
  uid: c362db53-f55e-4f81-bae2-ce84189c2ca7
spec:
  ingressClassName: nginx
  rules:
  - host: dev.pokedle.gg
    http:
      paths:
      - backend:
          service:
            name: pokedle-client-temp-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dev.pokedle.gg
    secretName: frontend-dev-tls
status:
  loadBalancer:
    ingress:
    - ip: 34.79.151.4
